# cfs-basecamp

cfe-eds-framework/basecamp_defs/: toolchain-cpu1.cmake
cfe-eds-framework/basecamp_defs/default/: cpu1_cfe_es_startup.scr
cfe-eds-framework/tools/eds/edslib/lua/: CMakeLists.txt
gnd-sys/app/: basecamp.ini
